Better interface for calling core WorkspaceTool functions from modules.